--- a/404.html
+++ b/404.html
@@ -68,7 +68,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Stormy's Website
+                <a class="navbar-brand" href="http://stormyjet.com">Stormy's Website
                 </a>
 
 
