--- a/blog.html
+++ b/blog.html
@@ -65,11 +65,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Stormy's Website</a>
+                <a class="navbar-brand" href="/">Stormy's Website</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="index.html">Home</a>
+                    <li><a href="/">Home</a>
                     </li>
                     <li class="active"><a href="#">Blog</a>
                     </li>
