--- a/meteor/index.html
+++ b/meteor/index.html
@@ -50,7 +50,7 @@
                     </li>
                     <li class="bg-danger"><a href="../htda/">HTDA</a>
                     </li>-->
-                    <li class="bg-success"><a style="color:white" href="../index.html">Main Site</a>
+                    <li class="bg-success"><a style="color:white" href="/">Main Site</a>
                     </li>
                 </ul>
             </div>
