--- a/open/rules.html
+++ b/open/rules.html
@@ -84,7 +84,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
 
-                    <li class="bg-success"><a class="roboto" style="color:white" href="../index.html">Main Site</a>
+                    <li class="bg-success"><a class="roboto" style="color:white" href="../">Main Site</a>
                     </li>
                 </ul>
             </div>
