--- a/tech/thought.html
+++ b/tech/thought.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<link href="core/css/bootstrap.min.css" rel="stylesheet">
-<script src="core/js/candy.js"></script>
-<script src="core/js/google.js"></script>
-<script src="core/js/bootstrap.min.js"></script>
-<link href="core/css/octicons.css" rel="stylesheet">
-<link href="core/css/sprockets-octicons.scss" rel="stylesheet">
-<script src="core/js/jquery.js"></script>
+<link href="/core/css/bootstrap.min.css" rel="stylesheet">
+<script src="/core/js/candy.js"></script>
+<script src="/core/js/google.js"></script>
+<script src="/core/js/bootstrap.min.js"></script>
+<link href="/core/css/octicons.css" rel="stylesheet">
+<link href="/core/css/sprockets-octicons.scss" rel="stylesheet">
+<script src="/core/js/jquery.js"></script>
 <script src="/core/js/bootstrap.min.js"></script>
 
 <head>
@@ -77,40 +77,16 @@
                     </li>
                     <li><a href="blog.html">Blog</a>
                     </li>
-                    <li class="active"><a href="#">Things I Made</a>
+                    <li><a href="things.html">Things I Made</a>
                     </li>
-                    <li><a href="contact.html">Contact</a>
-                    </li>
-                    <!--<li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Things I Made<span class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="random/cancer.html">Cancer Checker</a>
-                            </li>
-                            <li><a href="stuff/pokecrate/index.html">Pokecrate</a>
-                            </li>
-                            <li><a href="http://twitter.com/stormyjet">Twitter</a>
-                            </li>
-                            <li class="divider"></li>
-                            <li class="dropdown-header">Technical Stuff</li>
-                            <li><a href="https://github.com/stormyjet/stormyjet.github.io">Source on GitHub</a>
-                            </li>
-                        </ul>
-                        </li>-->
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <!--<li>
-                        <p class="navbar-text navbar-right">Under Construction |</p>
-                    </li>
-                    <li>
-                        <a href="http://stormyjet.com/sNet">sNet</a>
-                    </li>-->
                     <li class="bg-warning"><a href="nostalgia/">Nostalgia</a>
                     </li>
                     <li class="bg-danger"><a href="open/">openNews</a>
                     </li>
                     <li class="bg-info"><a href="meteor/index.html">Meteor Game</a>
                     </li>
-
                 </ul>
             </div>
             <!--/.nav-collapse -->
@@ -134,73 +110,54 @@
                 <center>
                     <div class="hidden-xs hidden-sm">
                         <!--Hidden on Mobile-->
-                        <p style="font-size:750%;word-wrap:break-word;">Things I made.</p>
+                        <p style="font-size:750%;word-wrap:break-word;">ThoughtGrab</p>
                     </div>
                     <div class="hidden-md hidden-lg">
                         <!-- Hidden on Non-Mobile-->
-                        <h1><strong>Things I made.</strong></h1>
+                        <h1><strong>ThoughtGrab</strong></h1>
                     </div>
+                    <!--Candies are shown here, if they don't load, the text is shown-->
+                    <div id="candy" style="font-size: 200%;">new experimental thought analyisis</div>
 
             </div>
             <!--end the gray box-->
-            <p class="lead">Hello! These are the things I have made and are readily available to view online!
+            <p class="lead">
+                ThoughtGrab is a new technology that can grab thoughts from a mind. It grabs these and can be utilized in many things.
                 <br>
-                <a href="random/cancer.html">The free online cancer checker</a>
+                <hr>
+                <h3>How to start:</h3>
+                <br>ThoughtGrab can be initialzied using <kbd>thought(grab);</kbd> or the new shorthand <kbd>think(on);</kbd> 
                 <br>
-                <a href="stuff/pokecrate/index.html">I redesigned the website for Pokecrate once.</a>
-                <br>
-                <a href="random/NubOrNot.html">The Useful Page to tell you if you are a nub or not.</a>
-                <br>
-                <a href="random/YourMom.html">And the Your Mom Joke Maker</a>  <kbd>[Under Construction]</kbd>
-                <br>I also make <em>very</em> bad <a href="https://www.youtube.com/user/ItsStormyJet">YouTube</a> videos.
-                <br>I also make and sometimes maintain a game called <a href="meteor/index.html">Meteor Game</a>. It's quite hard.
-                <!--<br>I'm in the process of making <a href="htda/">How To Do Anything</a>. A guide on, well, how to do anything! <kbd>[Under Construction]</kbd>-->
-                <br>You can stalk me at my<a href="http://twitter.com/stormyjet"> Twitter </a>and not Facebook because I don't have one.
-                <br>
+                <h3>How to use:</h3>
+                <br>TG can be used by simple things, and this is sample code:
+                <kbd>thought(grab); <br>
+                thought(analyze);<br>
+                get(results);
+                    create(
+                        results.tg.js(
+                            using(stdHTML)));
+                    stop
+                </kbd>
+                <br>This will create a page and generate it based on suggestion.
+
+
             </p>
-            </center>
-        </div>
-        <hr>
-        <!-- 
-        <div class="row ">
-            <div class="col-lg-4 ">
-                <h2>Meteor Game</h2>
-                <p>Meteor Game is a game that I made for no reason. See more info on the site.</p>
-                <p><a class="btn btn-primary " href="meteor/index.html" role="button ">View details &raquo;</a>
-                </p>
-            </div>
-            <div class="col-lg-4 ">
-                <h2>Hiring</h2>
-
-                <p>You can contact me at
-                    <br>
-                    <kbd>business 'at' this domain</kbd>
-                    <br>and we can work things out if you ever need a crappy website like this one.
+            <h4>ThoughtGrab. Simple, Easy, Free. Now works with headsets!</h4>
+            <br>
+            <hr>
+            <!-- Footer Begins Here -->
+            <div class="footer ">
+                <center>
                     <p>
-
+                        Made by StormyJet. Uses code from Bootstrap.
+                        <br><span class="octicon octicon-radio-tower"></span> with <span class="octicon octicon-heart"></span> by <span class="octicon octicon-logo-github"></span>
                     </p>
-            </div>
-            <div class="col-lg-4 ">
-                <h2>Blog</h2>
-                <p>I have one of those.</p>
-                <p><a class="btn btn-primary " href="blog.html" role="button ">Go now &raquo;</a>
-                </p>
-            </div>
-        </div>-->
-        <br>
-        <hr>
-        <!-- Footer Begins Here -->
-        <div class="footer ">
-            <center>
-                <p>
-                    Made by StormyJet. Uses code from Bootstrap.
-                </p>
 
-            </center>
+                </center>
+            </div>
+
         </div>
-
-    </div>
-    <!-- /container -->
+        <!-- /container -->
 
 </body>
 <!--Core JS and CSS stuff. Placed at the bottom because I can put it there-->
