--- a/topsecret.html
+++ b/topsecret.html
@@ -33,7 +33,7 @@
 
 </head>
 <center>
-    <a href="index.html">
+    <a href="i/">
         <img src="core/img/garywashere.jpg" />
     </a>
     <audio autoplay loop preload="auto">
