--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <link href="core/css/bootstrap.min.css" rel="stylesheet">
-<script src="core/js/candy.js"></script>
 <script src="core/js/google.js"></script>
 <script src="core/js/bootstrap.min.js"></script>
 <link href="core/css/octicons.css" rel="stylesheet">
@@ -80,7 +79,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="topsecret.html">Stormy's Website
+                <a class="navbar-brand" href="topsecret">Stormy's Website
                 </a>
 
 
@@ -164,9 +163,9 @@
                 <br>
                 <a href="random/cancer.html">The free online cancer checker</a>
                 <br>
-                <a href="stuff/pokecrate/index.html">I also redesigned the website for Pokecrate once.</a>
+                <a href="stuff/pokecrate/">I also redesigned the website for Pokecrate once.</a>
                 <br>
-                <a href="things.html">Click here for more!</a>
+                <a href="things">Click here for more!</a>
                 <br>If you ask kindly enough at my <a href="http://twitter.com/stormyjet">Twitter</a>, I may be able to make something for you. Maybe.
                 <br>
             </p>
@@ -179,7 +178,7 @@
             <div class="col-lg-4 ">
                 <h2>Meteor Game</h2>
                 <p>Meteor Game is a game that I made for no reason. See more info on the site.</p>
-                <p><a class="btn btn-primary " href="meteor/index.html" role="button ">View details &raquo;</a>
+                <p><a class="btn btn-primary " href="meteor/" role="button ">View details &raquo;</a>
                 </p>
             </div>
             <div class="col-lg-4 ">
@@ -198,7 +197,7 @@
             <div class="col-lg-4 ">
                 <h2>Blog</h2>
                 <p>I have one of those.</p>
-                <p><a class="btn btn-primary " href="blog.html" role="button ">Go now &raquo;</a>
+                <p><a class="btn btn-primary " href="blog" role="button ">Go now &raquo;</a>
                 </p>
             </div>
         </div>
@@ -212,11 +211,16 @@
                     <br>Made with <span class="octicon octicon-heart"></span> and hosted on <span class="octicon octicon-logo-github"></span>
                     <br>
                 </p>
+                <p class="font-size: 10pt">This page was generated in -3.2 seconds using <a href="tech/thought">ThoughtGrab</a>
+                </p>
+
 
             </center>
             <div class="visible-xs">
                 <div class="alert alert-info" role="alert"><strong>Just a heads up</strong>
                     <br>Your screen may be too small for this website. Try going landscape or going to a desktop!</div>
+                <br>
+
             </div>
         </div>
 
