--- a/stats.html
+++ b/stats.html
@@ -66,7 +66,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Stormy's Website
+                <a class="navbar-brand" href="/">Stormy's Website
                 </a>
 
 
