--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <script src="/core/js/bootstrap.min.js"></script>
 <link href="core/css/font-awesome.min.css" rel="stylesheet">
 <link href="core/scss/font-awesome.scss" rel="stylesheet">
+<script src="core/js/candy.js"></script>
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
