--- a/contact.html
+++ b/contact.html
@@ -79,14 +79,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Stormy's Website
+                <a class="navbar-brand" href="/">Stormy's Website
                 </a>
 
 
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a>
+                    <li><a href="/">Home</a>
                     </li>
                     <li><a href="blog.html">Blog</a>
                     </li>
