Backpages is love. Backpages is life.

--- a/404.html
+++ b/404.html
@@ -103,7 +103,7 @@
                     <!--<li>
                         <p class="navbar-text navbar-right">Under Construction |</p>
                     </li>-->
-                    <li class="bg-warning"><a href="http://stormyjet.com/nostalgia/">Nostalgia</a>
+                    <li class="bg-warning"><a href="backpages/">The Backpages</a>
                     </li>
                     <li class="bg-danger"><a href="http://stormyjet.com/open/">openNews</a>
                     </li>
@@ -160,7 +160,7 @@
                     <br>
                     <a href="http://stormyjet.com/stuff/pokecrate/">Pokecrate Home</a>
                     <br>
-                    <a href="http://stormyjet.com/nostalgia">Nostalgia Home</a>
+                    <a href="http://stormyjet.com/backpages">The Backpages Home</a>
                     <br>
                     <hr>
                     <p class="lead">None of them? Here are links to other things I have made.
