--- a/backpages/nostalgia/index-NoCosmic.html
+++ b/backpages/nostalgia/index-NoCosmic.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<link href="core/css/bootstrap.min.css" rel="stylesheet">
-<script src="core/js/google.js"></script>
-<script src="core/js/bootstrap.min.js"></script>
-<link href="core/css/octicons.css" rel="stylesheet">
-<link href="core/css/sprockets-octicons.scss" rel="stylesheet">
-<script src="core/js/jquery.js"></script>
-<script src="/core/js/bootstrap.min.js"></script>
-<link href="core/css/font-awesome.min.css" rel="stylesheet">
-<link href="core/scss/font-awesome.scss" rel="stylesheet">
-<script src="core/js/candy.js"></script>
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<script src="http://stomryjet.com/core/js/candy.js"></script>
+<script src="http://stomryjet.com/core/js/google.js"></script>
+<script src="http://stomryjet.com/core/js/bootstrap.min.js"></script>
+<link href="http://stomryjet.com/core/css/octicons.css" rel="stylesheet">
+<link href="http://stomryjet.com/core/css/sprockets-octicons.scss" rel="stylesheet">
+<script src="http://stomryjet.com/core/js/jquery.js"></script>
+<script src="http://stomryjet.com/core/js/bootstrap.min.js"></script>
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -80,21 +78,22 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="topsecret">Stormy's Website
+                <a class="navbar-brand" href="nostalgia/">Nostalgia
                 </a>
 
 
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a>
+                    <li><a href="index.html">Home</a>
                     </li>
-                    <li><a href="blog.html">Blog</a>
+                    <li><a href="index-Dropbox.html">Dropbox Homepage</a>
                     </li>
-                    <li><a href="things.html">Things I Made</a>
+                    <li><a href="index-UniNav.html">UniNav Homepage</a>
                     </li>
-                    <li><a href="contact.html">Contact</a>
+                    <li class="active"><a href="#">Before Cosmic Homepage</a>
                     </li>
+
                     <!--<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Things I Made<span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
@@ -113,15 +112,65 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
 
-                    <li class="bg-warning"><a href="backpages/">The Backpages</a>
+                    <li class="bg-success"><a href="http://stormyjet.com">Main Site</a>
                     </li>
-                    <li class="bg-danger"><a href="open/">openNews</a>
+                </ul>
+            </div>
+            <!--/.nav-collapse -->
+        </div>
+    </div>
+    <!--Nav ends here-->
+    <!--Nav Begins Here-->
+    <div class="navbar navbar-default" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="topsecret.html">Stormy's Website
+                </a>
+
+
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a>
                     </li>
-                    <li class="bg-info"><a href="meteor/index.html">Meteor Game</a>
+                    <li><a href="explain.html">Blog</a>
+                    </li>
+                    <li><a href="explain.html">Things I Made</a>
+                    </li>
+
+                    <!--<li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Things I Made<span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="random/cancer.html">Cancer Checker</a>
+                            </li>
+                            <li><a href="stuff/pokecrate/index.html">Pokecrate</a>
+                            </li>
+                            <li><a href="http://twitter.com/stormyjet">Twitter</a>
+                            </li>
+                            <li class="divider"></li>
+                            <li class="dropdown-header">Technical Stuff</li>
+                            <li><a href="https://github.com/stormyjet/stormyjet.github.io">Source on GitHub</a>
+                            </li>
+                        </ul>
+                    </li>-->
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <!--<li>
+                        <p class="navbar-text navbar-right">Under Construction |</p>
+                    </li>-->
+                    <li class="bg-danger"><a href="explain.html">openNews</a>
+                    </li>
+                    <li class="bg-info"><a href="explain.html">Meteor Game</a>
                     </li>
                     <li><a href="https://github.com/stormyjet/stormyjet.github.io"><span class="octicon octicon-mark-github"></span></a>
                     </li>
-                    <li><a href="stats.html"><span class="octicon octicon-pulse"></span></a>
+                    <li><a href="explain.htmll"><span class="octicon octicon-pulse"></span></a>
                     </li>
                 </ul>
             </div>
@@ -137,10 +186,6 @@
             <br>If you're smart, the CSS didn't load, so this happened.</p>
 
     </center>
-    <br>
-    <br>
-    <br>
-
 
     <!-- Jumbotron -->
     <div class="container">
@@ -162,11 +207,11 @@
             <!--end the gray box-->
             <p class="lead">In all seriousness, I'm Stormy and I make things on the internet. This is my website. Hello. Below are some links, and here are some other things I made.
                 <br>
-                <a href="random/cancer.html">The free online cancer checker</a>
+                <a href="explain.html">The free online cancer checker</a>
                 <br>
-                <a href="stuff/pokecrate/">I also redesigned the website for Pokecrate once.</a>
+                <a href="explain.html">I also redesigned the website for Pokecrate once.</a>
                 <br>
-                <a href="things">Click here for more!</a>
+                <a href="explain.html">Click here for more!</a>
                 <br>If you ask kindly enough at my <a href="http://twitter.com/stormyjet">Twitter</a>, I may be able to make something for you. Maybe.
                 <br>
             </p>
@@ -179,7 +224,7 @@
             <div class="col-lg-4 ">
                 <h2>Meteor Game</h2>
                 <p>Meteor Game is a game that I made for no reason. See more info on the site.</p>
-                <p><a class="btn btn-primary " href="meteor/" role="button ">View details &raquo;</a>
+                <p><a class="btn btn-primary " href="explain.html" role="button ">View details &raquo;</a>
                 </p>
             </div>
             <div class="col-lg-4 ">
@@ -198,7 +243,7 @@
             <div class="col-lg-4 ">
                 <h2>Blog</h2>
                 <p>I have one of those.</p>
-                <p><a class="btn btn-primary " href="blog" role="button ">Go now &raquo;</a>
+                <p><a class="btn btn-primary " href="explain.html" role="button ">Go now &raquo;</a>
                 </p>
             </div>
         </div>
@@ -210,18 +255,12 @@
                 <p>
                     Made by StormyJet. Uses code from Bootstrap.
                     <br>Made with <span class="octicon octicon-heart"></span> and hosted on <span class="octicon octicon-logo-github"></span>
-                    <br>
                 </p>
-                <p class="font-size: 10pt">This page was generated in -3.2 seconds using <a href="tech/thought">ThoughtGrab</a>
-                </p>
-
 
             </center>
             <div class="visible-xs">
                 <div class="alert alert-info" role="alert"><strong>Just a heads up</strong>
                     <br>Your screen may be too small for this website. Try going landscape or going to a desktop!</div>
-                <br>
-
             </div>
         </div>
 
