--- a/blog.html
+++ b/blog.html
@@ -100,7 +100,7 @@
                     <li>
                         <a href="http://stormyjet.com/sNet">sNet</a>
                     </li>-->
-                    <li class="bg-warning"><a href="nostalgia/">Nostalgia</a>
+                    <li class="bg-warning"><a href="backpages/">The Backpages</a>
                     </li>
                     <li class="bg-danger"><a href="open/">openNews</a>
                     </li>
