--- a/things.html
+++ b/things.html
@@ -104,12 +104,12 @@
                     <li>
                         <a href="http://stormyjet.com/sNet">sNet</a>
                     </li>-->
-                    <li class="bg-warning"><a href="nostalgia/">Nostalgia</a>
-                    </li>
-                    <li class="bg-danger"><a href="open/">openNews</a>
-                    </li>
-                    <li class="bg-info"><a href="meteor/index.html">Meteor Game</a>
-                    </li>
+                    <<li class="bg-warning"><a href="backpages/">The Backpages</a>
+                        </li>
+                        <li class="bg-danger"><a href="open/">openNews</a>
+                        </li>
+                        <li class="bg-info"><a href="meteor/index.html">Meteor Game</a>
+                        </li>
 
                 </ul>
             </div>
