--- a/backpages/index.html
+++ b/backpages/index.html
@@ -30,7 +30,7 @@
     <meta name="msapplication-square310x310logo" content="/img/mstile-310x310.png">
     <meta name="msapplication-wide310x150logo" content="/img/mstile-310x150.png">
 
-    <title>nostalgia</title>
+    <title>the backpages</title>
 
     <!-- Bootstrap core CSS -->
     <link href="http://stormyjet.com/core/css/bootstrap.min.css" rel="stylesheet">
