--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <meta name="language" content="en-us">
     <meta name="revisit-after" content="30">
     <meta name="google-site-verification" content="OkvES3vkDmmuSt2GLXE6-uSqPoyssekJ5quiSMuP5RM" />
+    <meta name="wot-verification" content="73fbf9c3a06ecadb8dff" />
     <link rel="shortcut icon" href="/core/img/favicon.ico">
     <link rel="apple-touch-icon" sizes="57x57" href="/core/img/apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="114x114" href="/core/img/apple-touch-icon-114x114.png">
