--- a/tech/thought.html
+++ b/tech/thought.html
@@ -82,7 +82,7 @@
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="bg-warning"><a href="nostalgia/">Nostalgia</a>
+                    <li class="bg-warning"><a href="backpages/">The Backpages</a>
                     </li>
                     <li class="bg-danger"><a href="open/">openNews</a>
                     </li>
