--- a/contact.html
+++ b/contact.html
@@ -171,10 +171,12 @@
         </div>
         <br>
         <p class="lead">By Email:
+            <br>attach a <kbd>'at' this domain</kbd> for your email to be sent.
             <div class="list-group">
-                <a class="list-group-item" href="#"><i class="fa fa-paper-plane-o fa-fw"></i> General: <kbd>stormyjet 'at' this domain</kbd></a>
-                <a class="list-group-item" href="#"><i class="fa fa-building fa-fw"></i> Business Email: <kbd>business 'at' this domain</kbd></a>
-                <a class="list-group-item" href="#"><i class="fa fa-newspaper-o fa-fw"></i> openNews related: <kbd>coming soon</kbd></a>
+                <a class="list-group-item" href="#"><i class="fa fa-paper-plane-o fa-fw"></i> General things? Send it to: <kbd>general</kbd></a>
+                <a class="list-group-item" href="#"><i class="fa fa-building fa-fw"></i> Business Related? Send your email to: <kbd>busines</kbd></a>
+                <a class="list-group-item" href="#"><i class="fa fa-newspaper-o fa-fw"></i> openNews stuff? Send it over to: <kbd>opennews</kbd></a>
+                <a class="list-group-item" href="#">Think I'm violating something? Send that email to: <kbd>legal</kbd></a>
 
 
 
