--- a/contact.html
+++ b/contact.html
@@ -174,7 +174,7 @@
             <br>attach a <kbd>'at' this domain</kbd> for your email to be sent.
             <div class="list-group">
                 <a class="list-group-item" href="#"><i class="fa fa-paper-plane-o fa-fw"></i> General things? Send it to: <kbd>general</kbd></a>
-                <a class="list-group-item" href="#"><i class="fa fa-building fa-fw"></i> Business Related? Send your email to: <kbd>busines</kbd></a>
+                <a class="list-group-item" href="#"><i class="fa fa-building fa-fw"></i> Business Related? Send your email to: <kbd>business</kbd></a>
                 <a class="list-group-item" href="#"><i class="fa fa-newspaper-o fa-fw"></i> openNews stuff? Send it over to: <kbd>opennews</kbd></a>
                 <a class="list-group-item" href="#">Think I'm violating something? Send that email to: <kbd>legal</kbd></a>
 
