--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="topsecret">Stormy's Website
-                </a>
+                <!--<a class="navbar-brand" href="topsecret">Stormy's Website
+                </a>-->
 
 
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a>
+                    <li class="active"><a href="topsecret.html">Home</a>
                     </li>
                     <li><a href="blog.html">Blog</a>
                     </li>
@@ -150,7 +150,8 @@
                 <center>
                     <div class="hidden-xs hidden-sm">
                         <!--Hidden on Mobile-->
-                        <p style="font-size:750%;word-wrap:break-word;">Stormy's Website</p>
+                        <!--<p style="font-size:750%;word-wrap:break-word;">Stormy's Website</p>-->
+                        <img src="core/img/logo.gif">
                     </div>
                     <div class="hidden-md hidden-lg">
                         <!-- Hidden on Non-Mobile-->
