--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <!--<a class="navbar-brand" href="topsecret">Stormy's Website
-                </a>-->
+                <a class="navbar-brand" href="topsecret">Stormy's Website
+                </a>
 
 
             </div>
@@ -144,14 +144,17 @@
 
 
     <!-- Jumbotron -->
+    <center>
+        <img src="core/img/logo.gif">
+    </center>
     <div class="container">
         <div>
             <div class="jumbotron">
                 <center>
                     <div class="hidden-xs hidden-sm">
                         <!--Hidden on Mobile-->
-                        <!--<p style="font-size:750%;word-wrap:break-word;">Stormy's Website</p>-->
-                        <img src="core/img/logo.gif">
+                        <p style="font-size:750%;word-wrap:break-word;">Stormy's Website</p>
+
                     </div>
                     <div class="hidden-md hidden-lg">
                         <!-- Hidden on Non-Mobile-->
