--- a/stuff/ebola/index.html
+++ b/stuff/ebola/index.html
@@ -74,16 +74,14 @@
 
     </center>
     <!-- Jumbotron -->
-    <center>
-        <img src="core/img/logo.gif">
-    </center>
+  
     <div class="container">
         <div>
             <div class="jumbotron">
                 <center>
                     <div class="hidden-xs hidden-sm">
                         <!--Hidden on Mobile-->
-                        <p style="font-size:500%;word-wrap:break-word;">Do I have <a href="en.wikipedia.org/wiki/ebola">Ebola?</a>
+                        <p style="font-size:500%;word-wrap:break-word;">Do I have <a href="http://en.wikipedia.org/wiki/ebola">Ebola?</a>
                         </p>
 
                     </div>
@@ -97,15 +95,21 @@
             </div>
             <!--end the gray box-->
             <p class="lead">If you want to find out if you have ebola, please enter your symptoms below:</p>
-            <form action="results.html">
-                <center>
-                    <h1 style="float:center;font-size:45pt;"><input style="color:black" type="text" name="sypmtomin" value=""></input></h1>
-                </center>
-                <input type="submit" style="height: 0px; width: 0px; border: none; padding: 0px;" hidefocus="true" />
-            </form>
             <div style="vertical-align:middle;">
+                        <!--<h1 style="font-size:45pt;align:center">Input your symptoms that you see</h1>-->
+                        <br>
+                        <br>
+                        <form action="results.html">
+                            <center>
+                                <h1 style="float:center;font-size:45pt;"><input style="color:black" type="text" name="sypmtomin" value=""></input></h1>
+                            </center>
+                            <input type="submit" style="height: 0px; width: 0px; border: none; padding: 0px;" hidefocus="true" />
+                        </form>
+
+
+                        <div style="vertical-align:middle;">
                             <button type="button" class="btn btn-lg">
-                                <a style="color:black;float:right;" href="results.html">Check</a>
+                                <a style="color:black;float:right;" href="results.html">Ebola Check</a>
                             </button>
                             </p>
                         </div>
