--- a/stuff/ebola/index.html
+++ b/stuff/ebola/index.html
@@ -105,14 +105,14 @@
                             </center>
                             <input type="submit" style="height: 0px; width: 0px; border: none; padding: 0px;" hidefocus="true" />
                         </form>
+<br>
 
-
-                        <div style="vertical-align:middle;">
+                        <div style="vertical-align:middle;"><center>
                             <button type="button" class="btn btn-lg">
                                 <a style="color:black;float:right;" href="results.html">Ebola Check</a>
                             </button>
                             </p>
-                        </div>
+                        </center></div>
             </center>
         </div>
         <hr>
