--- a/stuff/ebola/results.html
+++ b/stuff/ebola/results.html
@@ -48,7 +48,7 @@
     <title>Loading</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="core/css/bootstrap.min.css" rel="stylesheet">
 
 
 
@@ -63,7 +63,7 @@
 
                         <div class="masthead">
                             <center>
-                                <h1 class="text-muted">Cancer Check</h1>
+                                <h1 class="text-muted">Ebola Check</h1>
 
                             </center>
                         </div>
