--- a/random/space.html
+++ b/random/space.html
@@ -45,7 +45,7 @@
         <![endif]-->
 
 <body>
-    <script>javascript:(function () {var s = document.createElement('script');s.setAttribute('src', 'http://fontbomb.ilex.ca/js/main.js');document.body.appendChild(s);}());</script>
+    <script src="../core/js/fontbomb.js"></script>
     <center>
         <!--
         <div class="alert alert-success">
