--- a/index.html
+++ b/index.html
@@ -219,6 +219,28 @@
                 </p>
                 <p class="font-size: 10pt">This page was generated in -3.2 seconds using <a href="tech/thought">ThoughtGrab</a>
                 </p>
+                <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+  Not MLG Enough?
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabel">MLG-ifier</h4>
+      </div>
+      <div class="modal-body">
+        <iframe width="560" height="315" src="//www.youtube.com/embed/wnl-qhCgW0Y?list=UUhVywVwxANCuTGl3dynZG_A" frameborder="1" allowfullscreen></iframe>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 
             </center>
