--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         <iframe width="560" height="315" src="//www.youtube.com/embed/wnl-qhCgW0Y?list=UUhVywVwxANCuTGl3dynZG_A" frameborder="1" allowfullscreen></iframe>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
@@ -247,6 +247,8 @@
             <div class="visible-xs">
                 <div class="alert alert-info" role="alert"><strong>Just a heads up</strong>
                     <br>Your screen may be too small for this website. Try going landscape or going to a desktop!</div>
+                <br>
+                <br>
                 <br>
 
             </div>
