--- a/stuff/pokecrate/index.html
+++ b/stuff/pokecrate/index.html
@@ -1,159 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<!-- POKECRATE PEOPLE! HELLO!
-I'm stormyjet and I make things like this sometimes. You may use this code for free on one condition, I get some credit. I added it discreetly at the bottom. Have fun. -->
-<head>
-    <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-31660701-1', 'stormyjet.com');
-  ga('send', 'pageview');
-
-</script>
-    <link rel="shortcut icon" href="/img/favicon/favicon.ico">
-<link rel="apple-touch-icon" sizes="57x57" href="/img/favicon/apple-touch-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="114x114" href="/img/favicon/apple-touch-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="72x72" href="/img/favicon/apple-touch-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="144x144" href="/img/favicon/apple-touch-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="60x60" href="/img/favicon/apple-touch-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="120x120" href="/img/favicon/apple-touch-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="76x76" href="/img/favicon/apple-touch-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="152x152" href="/img/favicon/apple-touch-icon-152x152.png">
-<link rel="icon" type="image/png" href="/img/favicon/favicon-196x196.png" sizes="196x196">
-<link rel="icon" type="image/png" href="/img/favicon/favicon-160x160.png" sizes="160x160">
-<link rel="icon" type="image/png" href="/img/favicon/favicon-96x96.png" sizes="96x96">
-<link rel="icon" type="image/png" href="/img/favicon/favicon-16x16.png" sizes="16x16">
-<link rel="icon" type="image/png" href="/img/favicon/favicon-32x32.png" sizes="32x32">
-<meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="/img/favicon/mstile-144x144.png">
-<meta name="msapplication-config" content="/img/favicon/browserconfig.xml">
-    <title>PokeCrate</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-
-
-
-    <link href="css/justified-nav.css" rel="stylesheet">
-    <!-- STYLE SHEET FOR UNI-NAVBAR-->
-
-    <!--[if lt IE 7]>
-    <script type="text/javascript">
-
-   window.location="internetexplorer.html";
-
-</script>
-    <![endif]-->
-    <!--[if gte IE 7]>
-    <script type="text/javascript">
-
-   window.location="internetexplorer.html";
-
-</script>
-    <![endif]-->
-</head>
-
-
-    <center>
-        <!--
-        <div class="alert alert-success">
-            <p style="font-size:22px"><strong>Wonderful!</strong> You have read this important alert</p>
-        </div>-->
-        <!--<div class="alert alert-info">
-
-            <p style="font-size:22px;">
-                <strong>Attention!</strong>informative info</p>
-        </div>-->
-        <!--<div class="alert alert-warning">
-            <p style="font-size:22px"><strong>warning text in bold</strong>warning text</p>
-        </div>
-        <div class="alert alert-danger">
-            <p style="font-size:22px"><strong>Uh-Oh.</strong> Looks like something bad happened, fix it?</p>
-        </div>-->
-    </center>
-    
-    <div class="container ">
-
-        <div class="masthead ">
-            <center>
-                <a href="topsecret.html "><img src="img/pokecrate-toplogo.PNG"></a>
-            </center>
-            <ul class="nav nav-justified ">
-
-                <li class="active "><a href="#">Home</a>
-                </li>
-                <li><a href="about.html">About</a>
-                </li>
-                <li><a href="subscribe.html">Subscription</a>
-                </li>
-                <li><a href="contact.html">Contact</a>
-                </li>
- 
-
-
-            </ul>
-        </div>
-        <!--<li class="active "><a href="# ">Test</a></li>
-          <li><a href="http://twitter.com/stormyjet ">Twitter</a></li>
-          
-          <!--<li><a href="http://meteorgame.github.io ">Meteor Game</a></li>
-          <li><a href="http://mcfs.github.io ">MCFS</a></li>-->
-
-
-        <center>
-            <p class="nocss ">Whoa there.
-                <br>Looks like the page didn't load properly.
-                <br>Click <a href="index.html ">Here</a> to reload the page. Hopefully it works! Sorry for the inconvenience</p>
-        </center>
-
-        <!-- Jumbotron -->
-<body>
-        <div class="jumbotron ">
-            <h1>Welcome PokeFans!</h1>
-            <p class="lead ">Do you love Pokémon as much as we do? Subscribe today and start receiving stuff you cannot find anywhere else.  We are currently working with some vary talented artist to bring you exclusive Pokémon shirts just available here at PokeCrate.  We are working hard every day to bring you ALL POKEMON ITEMS, ALL THE TIME.  Follow us on <a href="https://twitter.com/pokecrate">Twitter</a>, <a href="https://www.facebook.com/PokeCrate">Facebook</a>, Google+ and even <a href="https://www.youtube.com/channel/UC8AcgrP-FyF1QRFGGbLgJWQ">YouTube</a> for updates, news, new products, even special events and GIVEAWAYS.  We are bringing Pokémon tournaments and special events to PokeCrate. Don't delay! Your PokeCrate awaits you.</p>
-
-            </p>
-        </div>
-</body>
-    <foot>
-        <!-- Example row of columns -->
-        <div class="row ">
-            <div class="col-lg-4 ">
-                <h2>MasterCrate</h2>
-                <p>Every month subscribers will automatically be entered for a chance to win our MasterCrate.  Chosen at random, someone will win this special crate that will contain... A ORIGINAL BASE SET CHARIZARD! And other cool Pokemon stuff too! Will you be this months winner?</p>
-
-                </p>
-            </div>
-            <div class="col-lg-4 ">
-                <center><h2>Get your PokeCrate!</h2></center>
-<center><p><a class="btn btn-lg btn-info " href="subscribe.html" role="button ">Subscribe now!</a></center>
-
-            </div>
-            <div class="col-lg-4 ">
-                <h2>Our Crates</h2>
-                <p>Our PokeCrates throughout the months will feature many Pokemon items, some will feature shirts, others out of print booster packs, and even themed decks among other Pokemon items.  One things for sure though, every crate will contain some sort of Pokemon plush. You guys can count on it.</p>
-
-                </p>
-            </div>
-        </div>
-
-        <!-- Site footer -->
-        <div class="footer ">
-            <p><a href="http://www.stormyjet.com">Stormy</a> made this site. I'm not PokeCrate!
-            </p>
-        </div>
-
-    </div>
-    <!-- /container -->
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-
-
+<html>
+<title>Sorry!</title>
+    <body>I'm sorry, this page was requested by the owner of PokeCrate to be taken down. Sorry!<br>
+    If you're looking for Pokecrate, go <a href="https://www.pokecrate.com/index.html">here!</a></body>
 </html>
