--- a/stuff/pokecrate/index.html
+++ b/stuff/pokecrate/index.html
@@ -1,5 +1,6 @@
 <html>
-<title>Sorry!</title>
-    <body>I'm sorry, this page was requested by the owner of PokeCrate to be taken down. Sorry!<br>
-    If you're looking for Pokecrate, go <a href="https://www.pokecrate.com/index.html">here!</a></body>
+    <link href="../../core/css/bootstrap.min.css" rel="stylesheet">
+<title>Sorry!</title><center>
+    <body><h3>I'm sorry, this page was requested by the owner of PokeCrate to be taken down. Sorry!<br>
+    If you're looking for Pokecrate, go <a href="https://www.pokecrate.com/index.html">here!</a></h3></body></center>
 </html>
