--- a/things.html
+++ b/things.html
@@ -146,8 +146,8 @@
             <p class="lead">Hello! These are the things I have made and are readily available to view online!
                 <br>
                 <a href="random/cancer.html">The free online cancer checker</a> <a href="stuff/ebola/index.html"> And the Ebola checker spinoff.</a>
-                <br>
-                <a href="stuff/pokecrate/index.html">I redesigned the website for Pokecrate once.</a>
+                <!--<br>
+                <a href="stuff/pokecrate/index.html">I redesigned the website for Pokecrate once.</a>-->
                 <br>
                 <a href="random/burn.html">The List of Tired Jokes in the United States</a><br>
                 
