--- a/404.html
+++ b/404.html
@@ -157,8 +157,8 @@
                     <a href="http://stormyjet.com/meteor/">Meteor Game Home</a>
                     <br>
                     <a href="http://stormyjet.com/open/">openNews Home</a>
-                    <br>
-                    <a href="http://stormyjet.com/stuff/pokecrate/">Pokecrate Home</a>
+                    <!--<br>
+                    <a href="http://stormyjet.com/stuff/pokecrate/">Pokecrate Home</a>-->
                     <br>
                     <a href="http://stormyjet.com/backpages">The Backpages Home</a>
                     <br>
