--- a/stuff/pokecrate/index.html
+++ b/stuff/pokecrate/index.html
@@ -76,16 +76,15 @@
                         <br>
                         <div class="masthead">
                             <center>
-                                <h1 class="text-muted">whoops!</h1>
+                                <h1 class="text-muted">stormyjet.com | the backpages</h1>
 
                             </center>
                         </div>
                     </div>
                     <h3>
-                        I'm sorry,</h3>
-                    <br>
-                    <h4>This is where the site for PokeCrate was, but it was requested to be taken down.
-                    <br>
+                       Oh dear, this page was taken down.</h3>
+                    <h4>This is where the site for PokeCrate was, but someone from Pokecrate approached me and asked for it to be taken down.
+
                     
                         <p class="lead"><a href="http://pokecrate.com">Please click here for the actual site.<br>
                     </p>
