--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
             <p class="lead">In all seriousness, I'm Stormy and I make things on the internet. This is my website. Hello. Below are some links, and here are some other things I made.
                 <br>
                 <a href="random/cancer.html">The free online cancer checker</a>
-                <br>
-                <a href="stuff/pokecrate/">I also redesigned the website for Pokecrate once.</a>
+                <!--<br>
+                <a href="stuff/pokecrate/">I also redesigned the website for Pokecrate once.</a>-->
                 <br>
                 <a href="things">Click here for more!</a>
                 <br>If you ask kindly enough at my <a href="http://twitter.com/stormyjet">Twitter</a>, I may be able to make something for you. Maybe.
