--- a/experiments/topsecret.html
+++ b/experiments/topsecret.html
@@ -34,10 +34,10 @@
 </head>
 <center>
     <a href="/">
-        <img src="core/img/garywashere.jpg" />
+        <img src="../core/img/garywashere.jpg" />
     </a>
     <audio autoplay loop preload="auto">
-        <source src="core/sound/interiorcrocodilealligator.mp3" type="audio/mpeg">
+        <source src="../core/audio/interiorcrocodilealligator.mp3" type="audio/mpeg">
     </audio>
 
     <br>click the picture to go back to home page
