--- a/labs/recaptcha.html
+++ b/labs/recaptcha.html
@@ -1,5 +1,6 @@
 <html>
-    <scirpt></scirpt>
-<head><script src='verify1.js'></script></head>
+<head><script src='https://www.google.com/recaptcha/api.js'></script></head>
 <form></form><center><div style="text-align:center;vertical-align:center;"  class="g-recaptcha" data-sitekey="6LeJLv8SAAAAADLnsCpoiIxz-kkExy7476lLuB-0"></div></center>
+<br>
+I wanted to try out the new recaptcha, so here it is. It doesn't submit anything. Woo.
 </html>
