--- a/code92/home.html
+++ b/code92/home.html
@@ -9,12 +9,12 @@
         <img src="core/img/mainbg.jpg" class="hidden">
         <!-- try to prefetch bg image-->
         <!--css-->
-        <link rel="stylesheet" href="core/css/main.min.css">
-        <link rel="stylesheet" href="core/css/bootstrap.min.css">
-        <link rel="stylesheet" href="core/css/anims.css">
-        <link rel="stylesheet" href="core/css/anims.css">
-        <script src="core/js/bootstrap.min.js"></script>
-        <link rel="icon" type="image/png" href="core/img/favicon.png">
+        <link rel="stylesheet" href="../core/css/main.min.css">
+        <link rel="stylesheet" href="../core/css/bootstrap.min.css">
+        <link rel="stylesheet" href="../core/css/anims.css">
+        <link rel="stylesheet" href="../core/css/anims.css">
+        <script src="../core/js/bootstrap.min.js"></script>
+        <link rel="icon" type="image/png" href="../core/img/favicon.png">
         <!--favicon-->
 
         <div class="container">
