--- a/code92/home.html
+++ b/code92/home.html
@@ -19,7 +19,7 @@
 
         <div class="container">
             <div class="title-anims">
-                <h1 class="spotlight">stormy's website</h1>
+                <h1 class="spotlight">Code92 Productions</h1>
             </div>
         </div>
         <!-- img prefetches -->
