--- a/code92/home.html
+++ b/code92/home.html
@@ -29,7 +29,7 @@
         </div>
         <br>
         <div class="alert alert-danger" role="alert">
-            <center><strong>Hey, Listen!</strong> This site is in <strong>early alpha!</strong> Things will be broken!</center>
+            <center><a href="https://mega.co.nz/#!Mc9wlCSS!pDWirXNCZVkSIauskgAfN5KAcC4CJswgwBMnvaZXU_w">Download Meteor Game 2.5 </a></center>
         </div>
         <div class="thisdivrocks">
     </head>
@@ -48,7 +48,7 @@
                         <iframe width="640" height="360" src="https://www.youtube-nocookie.com/embed/Uv-yTyY8YYE?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
                     </center>
                     <hr>
-                    <p class="lead">Meteor Game 2.5 link coming soon</p>
+                    
                     <br>
                     <br>
                 </div>
